# seashell

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  install.sh
src/: lib.rs  main.rs  parser.rs  settings.rs
src/commands/: cd.rs  command_map.rs  ls.rs  mod.rs  pwd.rs
src/commands/env/: get.rs  list.rs  mod.rs  set.rs  unset.rs
src/commands/seashell/: mod.rs  seashell_version.rs
src/test/: mod.rs  test_cd.rs  test_env.rs  test_ls.rs  test_pwd.rs  test_seashell_version.rs
src/utils/: arg_parser.rs  command_executor.rs  command_metadata.rs  environment.rs  io.rs  logger.rs  mod.rs  printer.rs  prompt_parser.rs  seashellarguments.rs  seashellprompt.rs
