[package]
name = "seashell"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi_term = "0.12.1"
chrono = "0.4.40"
colored = "3.0.0"
gethostname = "1.0.1"
lazy_static = "1.5.0"
reedline = "0.39.0"
tempfile = "3.19.1"

[profile.dev]
opt-level = 0
debug = true


[profile.release]
opt-level = 3
debug = false

[[bin]]
name = "seashell"
